:sparkles: 초기 셋팅 변경 (#4)
* :sparkles: 초기 셋팅

* :bug: 초기 세팅 수정

* :bug: config 수정